--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uni Search</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
     <div class="container">
         <h1> <i class="fa-solid fa-graduation-cap"></i> Search Universities </h1>
@@ -17,11 +21,20 @@
             </div>
             <ol>
                 <li>
-                    <h2 class="Head">College names ..</h2>
+                    <a href="#">
+                        <h2 class="Head">College names ..</h2>
+                    </a>
                 </li>
             </ol>
         </fieldset>
     </div>
+    <footer>
+        <p>
+            Copyright Created By &copy; Gurvinder Singh on 14 August 2023
+        </p>
+    </footer>
+
     <script src="app.js"></script>
 </body>
+
 </html>
