--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
         </p>
     </footer>
 
+    <!-- axios Lihrary -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js"
+        integrity="sha512-uMtXmF28A2Ab/JJO2t/vYhlaa/3ahUOgj1Zf27M5rOo8/+fcTUVH0/E0ll68njmjrLqOBjXM3V9NiPFL5ywWPQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     <script src="app.js"></script>
 </body>
 
